# goto

./: AGENTS.md  Cargo.toml  README.md  install.sh
specs/: origin.spec
src/: main.rs
src/cli/: mod.rs
src/core/: config.rs  index.rs  matcher.rs  mod.rs  project_detect.rs  ranking.rs  search.rs  workspace.rs
src/shell/: mod.rs
src/storage/: db.rs  models.rs
src/ui/: inline.rs
