[package]
name = "goto"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
fuzzy-matcher = "0.3"
sled = "0.34"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.4"
toml = "0.8"
